- commit changing project structure to break it up in different projects - adding google authentication

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "UserContextDb": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=PlantsUsersDb;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=true"
+    "UserContextDbLocal": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=PlantsUsersDb;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=true"
   }
 }
