--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,9 @@
     "LogLevel": {
       "Default": "Information",
       "Plants.info.API.Controllers": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Trace",
+      "Microsoft.AspNetCore.Authentication": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -15,9 +17,12 @@
     "SampleFile": "Data/Files/sampleFile.txt"
   },
   "Authentication": {
-    "SecretForKey": "longkeyThatWillbeReadTo_CreateaToken",
+    "SecretForKey": "longkeyThatWillbeReadTo_CreateaTokenNew",
     "Issuer": "https://localhost:7235",
-    "Audience": "plantinfoapi",
-    "expireInMinutes":  5
+    "Audience": "plantApi",
+    "expireInMinutes": 5
+  },
+  "GoogleAuthSettings": {
+    "clientId": "683573935998-g2aveu6e7n98au5umaqvq8nbap9j4v7k.apps.googleusercontent.com"
   }
 }
