--- a/Plants.info.API.csproj
+++ b/Plants.info.API.csproj
@@ -21,21 +21,14 @@
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.1" />
+    <PackageReference Include="Google.Apis.Core" Version="1.61.0" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.61.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
-    <None Remove="Data\Services\JwtFeatures\" />
-    <None Remove="Migrations\" />
-    <None Remove="Data\Repositories\" />
-    <None Remove="Data\Repositories\Interfaces\" />
-    <None Remove="Data\Services\DataSeeder\" />
-    <None Remove="Data\Services\PlantServices\" />
-    <None Remove="Data\Services\PlantServices\Interfaces\" />
-    <None Remove="Data\Services\Extensions\" />
     <None Remove="Data\Services\UserService\Interfaces\" />
-    <None Remove="Data\Services\JwtFeatures\Interfaces\" />
-    <None Remove="Data\Services\Utils\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Data\Files\sampleFile.txt">
@@ -44,16 +37,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Services\JwtFeatures\" />
-    <Folder Include="Migrations\" />
-    <Folder Include="Data\Repositories\" />
-    <Folder Include="Data\Repositories\Interfaces\" />
-    <Folder Include="Data\Services\DataSeeder\" />
-    <Folder Include="Data\Services\PlantServices\" />
-    <Folder Include="Data\Services\PlantServices\Interfaces\" />
-    <Folder Include="Data\Services\Extensions\" />
-    <Folder Include="Data\Services\UserServices\Interfaces\" />
-    <Folder Include="Data\Services\JwtFeatures\Interfaces\" />
-    <Folder Include="Data\Services\Utils\" />
+    <ProjectReference Include="..\Plants.info.API.Common\Plants.info.API.Common.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\Plants.info.API.Business\Plants.info.API.Business.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\Plants.info.API.Security\Plants.info.API.Security.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\Plants.info.API.Persistence\Plants.info.API.Persistence.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
